objects/LLC_BI__Participation__c.object
<CustomObject>
    <description>The participation object allows us to accurately and easily track information regarding the companies we participate our loans with, and the information regarding that participation.</description>
    <fields>
        <fullName>LLC_BI__Allocated_Amount__c</fullName>
        <description>This optional field is used to capture the final amount that was allocated to the participant.</description>
        <label>Allocated Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Bank__c</fullName>
        <description>This field has been replaced by the participant field, which provides a lookup to the participant Relationship record. This field should no longer be used and will be deprecated in a future release.</description>
        <label>Bank</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Mountain First</fullName>
                </value>
                <value>
                    <fullName>Carolina Premier Bank</fullName>
                </value>
                <value>
                    <fullName>Commonwealth</fullName>
                </value>
                <value>
                    <fullName>NWFCU</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Commitment_Amount__c</fullName>
        <description>This optional field is used to capture the amount which the participant committed to fund as a participant in the loan.</description>
        <label>Commitment Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__GTD_Amount__c</fullName>
        <description>This optional field is used to specify the amount of the loan guaranteed.</description>
        <label>GTD Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Invite_Amount__c</fullName>
        <description>This optional field is used to capture the amount at which the participant was invited to participate in the loan.</description>
        <label>Invite Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Is_My_Financial_Institution__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This optional field flags if the participation record is associated with the financial institution underwriting the loan.</description>
        <label>Is My Financial Institution</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Loan__c</fullName>
        <description>This required field is a master-detail field used to associate the participation record with a loan.</description>
        <label>Loan</label>
        <referenceTo>LLC_BI__Loan__c</referenceTo>
        <relationshipLabel>Participations</relationshipLabel>
        <relationshipName>Participations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Participant__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This optional field is a lookup to the relationship record for this participant.</description>
        <label>Participant</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Participations</relationshipLabel>
        <relationshipName>Participations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Participated__c</fullName>
        <description>This optional field is used to specify the percentage of the loan that is participated.</description>
        <label>% Participated</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Participation_Amount__c</fullName>
        <description>This optional field is used to capture the current amount of the participation.</description>
        <label>Participation Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Product_Package__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>--DEPRECATED-- This optional field is a lookup to the product package that this participation record is associated with.</description>
        <label>-D Product Package</label>
        <referenceTo>LLC_BI__Product_Package__c</referenceTo>
        <relationshipLabel>Participations</relationshipLabel>
        <relationshipName>Participations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Role__c</fullName>
        <description>This optional picklist field specifies the participant&apos;s role in the loan.</description>
        <label>Role</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Administrative Agent</fullName>
                </value>
                <value>
                    <fullName>Agent</fullName>
                </value>
                <value>
                    <fullName>Book Runner</fullName>
                </value>
                <value>
                    <fullName>Co-Agent</fullName>
                </value>
                <value>
                    <fullName>Participant</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__UNGTD_Amount__c</fullName>
        <description>This optional field is used to specify the unguaranteed amount of the participation.</description>
        <label>UNGTD Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Voting_Percent__c</fullName>
        <description>This optional field is used to capture the percentage of voting rights for this participant.</description>
        <label>% Voting Rights</label>
        <precision>6</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <label>Participation</label>
    <nameField>
        <displayFormat>PAR-{0000000000}</displayFormat>
        <label>Participation Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Participations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>